--- a/main.css
+++ b/main.css
@@ -30,7 +30,7 @@
     margin-left: 30px;;
   }
   
-  a {
+  /* a {
     color: #00b8d4;
     font-weight: 600;
     text-decoration: none;
@@ -46,7 +46,7 @@
   a:active {
     position: relative;
     top: 1px;
-  }
+  } */
   
   .content-wrapper {
     line-height: 1.4;
@@ -101,9 +101,13 @@
     height: 120px;
   }
   
+  .site-avatar img:hover {
+    /* filter:drop-shadow(8px 8px 10px gray); */
+    filter: opacity(70%);
+  }
   @media only screen and (max-width: 480px)  {
     .header {
-      background-size: 100%;
+      background-size: 100% auto;
       flex-direction: column;
     }
 
@@ -167,7 +171,6 @@
     justify-content: center;
   }
 
-  
   /*
    * SKILLS
    */
